# gl_alien_renderer

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  camera_settings.txt  cloth_stats.txt  cmake_install.cmake  flocking  imgui.ini  matrix_sample_mtype_2.csr
diagsessions/: Report20241121-2118.diagsession  Report20241124-0022.diagsession
enc_temp_folder/9f6507de10aaf36efb2c446987f67/: cloth_system.cpp
flocking/: flocking
flocking/shader/: boid.fs  boid.vs  exf.fs  exv.vs  sea.fs  sea.vs  seafloor.fs
flocking/shadertoy/: firefly.glsl
flocking/src/: camera.hpp  main.cpp  shader_s.hpp
flocking/src/boids/: boid.cpp  boid.hpp
flocking/src/solids/: cube.cpp  cube.hpp  pyramid.cpp  pyramid.hpp  solid.cpp  solid.hpp
flocking/src/spatial_map/: spatial_map.cpp  spatial_map.hpp
resources/assets/: flocking
resources/assets/models/: teapot.gltf
resources/assets/models/among_us/: scene.gltf
resources/assets/models/arctic_peeper/: scene.gltf
resources/assets/models/cactuar/: license.txt  scene.gltf
resources/assets/models/city/: license.txt  scene.gltf
resources/assets/models/earth/: scene.gltf
resources/assets/models/fumo/: license.txt  scene.gltf
resources/assets/models/gargantua/: license.txt  scene.gltf
resources/shader/: abberation.frag  base.frag  base.vert  base_inst.frag  base_inst.vert  blur.frag  boid.frag  boid.vert  cloth_edge.frag  cloth_edge.vert  cloth_fixed.frag  cloth_fixed.vert  cloth_hinge.frag  cloth_hinge.vert  cloth_particle.comp  cloth_particle.frag  cloth_particle.vert  comp_shader.comp  cull_shader.comp  debug.frag  debug.vert  debugline.frag  exf.frag  exf.fs  exv.vert  exv.vs  gen_particle.comp  indirect_cull_shader.comp  indirect_inst.frag  indirect_inst.vert  indirect_instcount_set.comp  invert.frag  kuwahara.frag  mine.frag  neon.frag  normal_shading.frag  normals.frag  normals.geom  normals.gs  passthrough.frag  (+8 more)
sandbox/: sharing.cpp
scene/: 1fumo.scn  boombox.scn  cactuar.scn  cube_lattice.scn  fumo.scn  gargantua.scn  instanced.scn  minecraft.scn  not_instanced.scn  p.scn  peeper.scn  scene.scn  scene_gen.py  simple.scn  space.scn  teapot.scn  triangle.scn  triangle_inst.scn
src/: TODO.txt  camera.cpp  camera.hpp  cloth_system.cpp  cloth_system.hpp  comp_renderer.cpp  comp_renderer.hpp  entity.hpp  gl_bindings.h  gpu_structs.hpp  macros.h  main.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  model_loader.cpp  model_loader.hpp  particle_system.cpp  particle_system.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp  scene_loader.cpp  scene_loader.hpp  scenedata.cpp  scenedata.hpp  shader_c.hpp  shader_s.hpp  transform.hpp  types.json  util.h  volume.cpp  volume.hpp  working example.txt
src/boids/: boid.cpp  boid.hpp  formation.hpp
src/solids/: cube.hpp  plane.cpp  plane.hpp  pyramid.hpp  solid.cpp  solid.hpp
src/spatial_map/: spatial_map.cpp  spatial_map.hpp
srdump/: comp_renderer.hpp  cube.cpp  cube.hpp  example_scene.cpp  example_scene.hpp  mesh.cpp  plane.cpp  plane.hpp  pyramid.cpp  pyramid.hpp
srdump/boids/: boid.hpp
srdump/spatial_map/: octree.hpp
test/: cc1.out.txt  cc2.out.txt  lecture_9_main_discrete_shells_simple.py  py1.out.txt  py2.out.txt
